--- a/package.json
+++ b/package.json
@@ -38,6 +38,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/pgibler/vscode-gpt.git"
+    "url": "https://github.com/pgibler/gpt-ide"
   }
 }
